--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       <section class="hero">
         <div class="container">
           <h1 class="title">Эффективные решения для вашего бизнеса</h1>
-          <button class="btn-main btn" type="button">Заказать услугу</button>
+          <button class="btn-main btn" type="button" data-modal-open>Заказать услугу</button>
         </div>
       </section>
 
@@ -129,12 +129,21 @@
           <ul class="examples">
             <li class="examples-pict">
               <img src="./imeges/img1.jpg" alt="work computer" width="370" />
+				  <div class="thumb">
+					  <h3 class="thumb-title">Десктопные приложения</h3>
+				  </div>
             </li>
             <li class="examples-pict">
               <img src="./imeges/img2.jpg" alt="work phone" width="370" />
+				  <div class="thumb">
+					<h3 class="thumb-title">Мобильные приложения</h3>
+				</div>
             </li>
             <li class="examples-pict">
               <img src="./imeges/img3.jpg" alt="work tab" width="370" />
+				  <div class="thumb">
+					<h3 class="thumb-title">Дизайнерские решения</h3>
+				</div>
             </li>
           </ul>
         </div>
@@ -414,5 +423,16 @@
         </div>
       </div>
     </footer>
+
+    <div class="backdrop is-hidden"data-modal>
+      <div class="modal">
+        <button class="button-modal" data-modal-close>
+			<svg class="team-social-icon" width="18" height="18">
+				<use href="./imeges/icons.svg#icon-close-black"></use>
+			 </svg>
+		  </button>
+      </div>
+    </div>
+    <script src="./modal.js"></script>
   </body>
 </html>
