--- a/portfolio.html
+++ b/portfolio.html
@@ -76,67 +76,85 @@
 
           <ul class="pictures">
             <li class="pictures-li">
+					<a href="" class="pictures-link">
               <img src="./imeges/tehnokryak.jpg" alt="tehnokryak" width="370" />
               <div class="pictures-box">
                 <h2 class="title-project">Технокряк</h2>
                 <p class="text-project">Веб-сайт</p>
               </div>
+				</a>
             </li>
             <li class="pictures-li">
+					<a href="" class="pictures-link">
               <img src="./imeges/poster.jpg" alt="poster" width="370" />
               <div class="pictures-box">
                 <h2 class="title-project">Постер New Orlean vs Golden Star</h2>
                 <p class="text-project">Дизайн</p>
               </div>
+				  </a>
             </li>
             <li class="pictures-li">
+					<a href="" class="pictures-link">
               <img src="./imeges/seafood.jpg" alt="seafood" width="370" />
               <div class="pictures-box">
                 <h2 class="title-project">Ресторан Seafood</h2>
                 <p class="text-project">Приложение</p>
-              </div>
+					</div>
+				</a>
             </li>
             <li class="pictures-li">
+					<a href="" class="pictures-link">
               <img src="./imeges/prime.jpg" alt="prime" width="370" />
               <div class="pictures-box">
                 <h2 class="title-project">Проект Prime</h2>
                 <p class="text-project">Маркетинг</p>
-              </div>
+					</div>
+				</a>
             </li>
             <li class="pictures-li">
+					<a href="" class="pictures-link">
               <img src="./imeges/boxes.jpg" alt="boxes" width="370" />
               <div class="pictures-box">
                 <h2 class="title-project">Проект Boxes</h2>
                 <p class="text-project">Приложение</p>
-              </div>
+					</div>
+				</a>
             </li>
             <li class="pictures-li">
+					<a href="" class="pictures-link">
               <img src="./imeges/inspiration.jpg" alt="inspiration" width="370" />
               <div class="pictures-box">
                 <h2 class="title-project">Inspiration has no Borders</h2>
                 <p class="text-project">Веб-сайт</p>
-              </div>
+					</div>
+				</a>
             </li>
             <li class="pictures-li">
+					<a href="" class="pictures-link">
               <img src="./imeges/limited.jpg" alt="limited" width="370" />
               <div class="pictures-box">
                 <h2 class="title-project">Издание Limited Edition</h2>
                 <p class="text-project">Дизайн</p>
-              </div>
+					</div>
+				</a>
             </li>
             <li class="pictures-li">
+					<a href="" class="pictures-link">
               <img src="./imeges/lab.jpg" alt="lab" width="370" />
               <div class="pictures-box">
                 <h2 class="title-project">Проект LAB</h2>
                 <p class="text-project">Маркетинг</p>
-              </div>
+					</div>
+				</a>
             </li>
             <li class="pictures-li">
+					<a href="" class="pictures-link">
               <img src="./imeges/business.jpg" alt="business" width="370" />
               <div class="pictures-box">
                 <h2 class="title-project">Growing Business</h2>
                 <p class="text-project">Приложение</p>
-              </div>
+					</div>
+				</a>
             </li>
           </ul>
         </div>
