--- a/portfolio.html
+++ b/portfolio.html
@@ -21,7 +21,6 @@
   </head>
 
   <body>
-	  
     <!-- !Шапка -->
 
     <header class="header">
@@ -41,23 +40,25 @@
         </nav>
 
         <ul class="contact">
-			<li class="contact-item">
-			  <a class="contact-link" href="mailto:info@devstudio.com">
-			  <svg class="contact-icon" width="16px" height="12px">
-				  <use href="./imeges/icons.svg#icon-envelope"></use>
-				</svg>
-				info@devstudio.com</a>
-			</li>
-			<li class="contact-item">
-			  <a class="contact-link" href="tel:+380961111111">
-			  <svg class="contact-icon" width="10px" height="16px">
-				  <use href="./imeges/icons.svg#icon-smartphone"></use>
-				</svg>
-				+38 096 111 11 11</a>
-			</li>
-		 </ul>
-	  </div>
-	</header>
+          <li class="contact-item">
+            <a class="contact-link" href="mailto:info@devstudio.com">
+              <svg class="contact-icon" width="16px" height="12px">
+                <use href="./imeges/icons.svg#icon-envelope"></use>
+              </svg>
+              info@devstudio.com</a
+            >
+          </li>
+          <li class="contact-item">
+            <a class="contact-link" href="tel:+380961111111">
+              <svg class="contact-icon" width="10px" height="16px">
+                <use href="./imeges/icons.svg#icon-smartphone"></use>
+              </svg>
+              +38 096 111 11 11</a
+            >
+          </li>
+        </ul>
+      </div>
+    </header>
 
     <main>
       <!-- !Portfolio -->
@@ -66,95 +67,110 @@
           <h1 class="visually-hidden">Portfolio</h1>
           <ul class="btn-list">
             <li class="btn-item"><button class="btn-portfolio btn" type="button">Все</button></li>
-            <li class="btn-item"><button class="btn-portfolio btn" type="button">Веб-сайты</button></li>
+            <li class="btn-item">
+              <button class="btn-portfolio btn" type="button">Веб-сайты</button>
+            </li>
             <li class="btn-item">
               <button class="btn-portfolio btn" type="button">Приложения</button>
             </li>
-            <li class="btn-item"><button class="btn-portfolio btn" type="button">Дизайн</button></li>
-            <li class="btn-item"><button class="btn-portfolio btn" type="button">Маркетинг</button></li>
+            <li class="btn-item">
+              <button class="btn-portfolio btn" type="button">Дизайн</button>
+            </li>
+            <li class="btn-item">
+              <button class="btn-portfolio btn" type="button">Маркетинг</button>
+            </li>
           </ul>
 
           <ul class="pictures">
             <li class="pictures-li">
-					<a href="" class="pictures-link">
-              <img src="./imeges/tehnokryak.jpg" alt="tehnokryak" width="370" />
-              <div class="pictures-box">
-                <h2 class="title-project">Технокряк</h2>
-                <p class="text-project">Веб-сайт</p>
-              </div>
-				</a>
-            </li>
-            <li class="pictures-li">
-					<a href="" class="pictures-link">
-              <img src="./imeges/poster.jpg" alt="poster" width="370" />
-              <div class="pictures-box">
-                <h2 class="title-project">Постер New Orlean vs Golden Star</h2>
-                <p class="text-project">Дизайн</p>
-              </div>
-				  </a>
-            </li>
-            <li class="pictures-li">
-					<a href="" class="pictures-link">
-              <img src="./imeges/seafood.jpg" alt="seafood" width="370" />
-              <div class="pictures-box">
-                <h2 class="title-project">Ресторан Seafood</h2>
-                <p class="text-project">Приложение</p>
+              <a href="" class="pictures-link">
+                <div class="pictures-thumb">
+                  <img src="./imeges/tehnokryak.jpg" alt="tehnokryak" width="370" />
+                  <div class="pictures-overlay">
+						<p class="pictures-text">
+                    Технокряк это современная площадка распространения коронавируса. Компании
+                    используют эту платформу для цифрового шпионажа и атак на защищённые сервера
+                    конкурентов.
+                  </p>
 					</div>
-				</a>
+                </div>
+                <div class="pictures-box">
+                  <h2 class="title-project">Технокряк</h2>
+                  <p class="text-project">Веб-сайт</p>
+                </div>
+              </a>
             </li>
             <li class="pictures-li">
-					<a href="" class="pictures-link">
-              <img src="./imeges/prime.jpg" alt="prime" width="370" />
-              <div class="pictures-box">
-                <h2 class="title-project">Проект Prime</h2>
-                <p class="text-project">Маркетинг</p>
-					</div>
-				</a>
+              <a href="" class="pictures-link">
+                <img src="./imeges/poster.jpg" alt="poster" width="370" />
+                <div class="pictures-box">
+                  <h2 class="title-project">Постер New Orlean vs Golden Star</h2>
+                  <p class="text-project">Дизайн</p>
+                </div>
+              </a>
             </li>
             <li class="pictures-li">
-					<a href="" class="pictures-link">
-              <img src="./imeges/boxes.jpg" alt="boxes" width="370" />
-              <div class="pictures-box">
-                <h2 class="title-project">Проект Boxes</h2>
-                <p class="text-project">Приложение</p>
-					</div>
-				</a>
+              <a href="" class="pictures-link">
+                <img src="./imeges/seafood.jpg" alt="seafood" width="370" />
+                <div class="pictures-box">
+                  <h2 class="title-project">Ресторан Seafood</h2>
+                  <p class="text-project">Приложение</p>
+                </div>
+              </a>
             </li>
             <li class="pictures-li">
-					<a href="" class="pictures-link">
-              <img src="./imeges/inspiration.jpg" alt="inspiration" width="370" />
-              <div class="pictures-box">
-                <h2 class="title-project">Inspiration has no Borders</h2>
-                <p class="text-project">Веб-сайт</p>
-					</div>
-				</a>
+              <a href="" class="pictures-link">
+                <img src="./imeges/prime.jpg" alt="prime" width="370" />
+                <div class="pictures-box">
+                  <h2 class="title-project">Проект Prime</h2>
+                  <p class="text-project">Маркетинг</p>
+                </div>
+              </a>
             </li>
             <li class="pictures-li">
-					<a href="" class="pictures-link">
-              <img src="./imeges/limited.jpg" alt="limited" width="370" />
-              <div class="pictures-box">
-                <h2 class="title-project">Издание Limited Edition</h2>
-                <p class="text-project">Дизайн</p>
-					</div>
-				</a>
+              <a href="" class="pictures-link">
+                <img src="./imeges/boxes.jpg" alt="boxes" width="370" />
+                <div class="pictures-box">
+                  <h2 class="title-project">Проект Boxes</h2>
+                  <p class="text-project">Приложение</p>
+                </div>
+              </a>
             </li>
             <li class="pictures-li">
-					<a href="" class="pictures-link">
-              <img src="./imeges/lab.jpg" alt="lab" width="370" />
-              <div class="pictures-box">
-                <h2 class="title-project">Проект LAB</h2>
-                <p class="text-project">Маркетинг</p>
-					</div>
-				</a>
+              <a href="" class="pictures-link">
+                <img src="./imeges/inspiration.jpg" alt="inspiration" width="370" />
+                <div class="pictures-box">
+                  <h2 class="title-project">Inspiration has no Borders</h2>
+                  <p class="text-project">Веб-сайт</p>
+                </div>
+              </a>
             </li>
             <li class="pictures-li">
-					<a href="" class="pictures-link">
-              <img src="./imeges/business.jpg" alt="business" width="370" />
-              <div class="pictures-box">
-                <h2 class="title-project">Growing Business</h2>
-                <p class="text-project">Приложение</p>
-					</div>
-				</a>
+              <a href="" class="pictures-link">
+                <img src="./imeges/limited.jpg" alt="limited" width="370" />
+                <div class="pictures-box">
+                  <h2 class="title-project">Издание Limited Edition</h2>
+                  <p class="text-project">Дизайн</p>
+                </div>
+              </a>
+            </li>
+            <li class="pictures-li">
+              <a href="" class="pictures-link">
+                <img src="./imeges/lab.jpg" alt="lab" width="370" />
+                <div class="pictures-box">
+                  <h2 class="title-project">Проект LAB</h2>
+                  <p class="text-project">Маркетинг</p>
+                </div>
+              </a>
+            </li>
+            <li class="pictures-li">
+              <a href="" class="pictures-link">
+                <img src="./imeges/business.jpg" alt="business" width="370" />
+                <div class="pictures-box">
+                  <h2 class="title-project">Growing Business</h2>
+                  <p class="text-project">Приложение</p>
+                </div>
+              </a>
             </li>
           </ul>
         </div>
@@ -164,29 +180,29 @@
     <!--!footer -->
     <footer class="footer">
       <div class="container flex-footer">
-			<div class="address-footer">
-        <a class="logo" href="./index.html">Web<span class="logo-light">Studio</span></a>
+        <div class="address-footer">
+          <a class="logo" href="./index.html">Web<span class="logo-light">Studio</span></a>
 
-        <address class="main-address">
-          <ul class="address">
-            <li class="map-item">
-              <a
-                class="map-link"
-                href="https://goo.gl/maps/Zfk1go88PQ9JeGADA"
-                target="_blank"
-                rel="noopener noreferrer"
-                >г. Киев, пр-т Леси Украинки, 26a</a
-              >
-            </li>
-            <li class="address-item">
-              <a class="address-link" href="mailto:info@example.com">info@example.com</a>
-            </li>
-            <li class="address-item">
-              <a class="address-link" href="tel:+380961111111">+38 096 111 11 11</a>
-            </li>
-          </ul>
-        </address>
-      </div>
+          <address class="main-address">
+            <ul class="address">
+              <li class="map-item">
+                <a
+                  class="map-link"
+                  href="https://goo.gl/maps/Zfk1go88PQ9JeGADA"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  >г. Киев, пр-т Леси Украинки, 26a</a
+                >
+              </li>
+              <li class="address-item">
+                <a class="address-link" href="mailto:info@example.com">info@example.com</a>
+              </li>
+              <li class="address-item">
+                <a class="address-link" href="tel:+380961111111">+38 096 111 11 11</a>
+              </li>
+            </ul>
+          </address>
+        </div>
 
         <div class="social-footer">
           <h3 class="footer-social-title">Присоединяйтесь</h3>
@@ -225,4 +241,3 @@
     </footer>
   </body>
 </html>
-
