--- a/portfolio.html
+++ b/portfolio.html
@@ -66,7 +66,9 @@
         <div class="container">
           <h1 class="visually-hidden">Portfolio</h1>
           <ul class="btn-list">
-            <li class="btn-item"><button class="btn-portfolio btn" type="button">Все</button></li>
+            <li class="btn-item">
+              <button class="btn-portfolio btn" type="button">Все</button>
+            </li>
             <li class="btn-item">
               <button class="btn-portfolio btn" type="button">Веб-сайты</button>
             </li>
@@ -87,12 +89,12 @@
                 <div class="pictures-thumb">
                   <img src="./imeges/tehnokryak.jpg" alt="tehnokryak" width="370" />
                   <div class="pictures-overlay">
-						<p class="pictures-text">
-                    Технокряк это современная площадка распространения коронавируса. Компании
-                    используют эту платформу для цифрового шпионажа и атак на защищённые сервера
-                    конкурентов.
-                  </p>
-					</div>
+                    <p class="pictures-text">
+                      Технокряк это современная площадка распространения коронавируса. Компании
+                      используют эту платформу для цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
                 </div>
                 <div class="pictures-box">
                   <h2 class="title-project">Технокряк</h2>
@@ -100,72 +102,152 @@
                 </div>
               </a>
             </li>
+
             <li class="pictures-li">
               <a href="" class="pictures-link">
-                <img src="./imeges/poster.jpg" alt="poster" width="370" />
+                <div class="pictures-thumb">
+                  <img src="./imeges/poster.jpg" alt="poster" width="370" />
+                  <div class="pictures-overlay">
+                    <p class="pictures-text">
+                      Технокряк это современная площадка распространения коронавируса. Компании
+                      используют эту платформу для цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
+                </div>
                 <div class="pictures-box">
                   <h2 class="title-project">Постер New Orlean vs Golden Star</h2>
                   <p class="text-project">Дизайн</p>
                 </div>
               </a>
             </li>
+
             <li class="pictures-li">
               <a href="" class="pictures-link">
-                <img src="./imeges/seafood.jpg" alt="seafood" width="370" />
+                <div class="pictures-thumb">
+                  <img src="./imeges/seafood.jpg" alt="seafood" width="370" />
+                  <div class="pictures-overlay">
+                    <p class="pictures-text">
+                      Технокряк это современная площадка распространения коронавируса. Компании
+                      используют эту платформу для цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
+                </div>
                 <div class="pictures-box">
                   <h2 class="title-project">Ресторан Seafood</h2>
                   <p class="text-project">Приложение</p>
                 </div>
               </a>
             </li>
+
             <li class="pictures-li">
               <a href="" class="pictures-link">
+					<div class="pictures-thumb">
                 <img src="./imeges/prime.jpg" alt="prime" width="370" />
+					 <div class="pictures-overlay">
+						<p class="pictures-text">
+						  Технокряк это современная площадка распространения коронавируса. Компании
+						  используют эту платформу для цифрового шпионажа и атак на защищённые сервера
+						  конкурентов.
+						</p>
+					 </div>
+				  </div>
                 <div class="pictures-box">
                   <h2 class="title-project">Проект Prime</h2>
                   <p class="text-project">Маркетинг</p>
                 </div>
               </a>
             </li>
-            <li class="pictures-li">
+           
+				<li class="pictures-li">
               <a href="" class="pictures-link">
+					<div class="pictures-thumb">
                 <img src="./imeges/boxes.jpg" alt="boxes" width="370" />
+					 <div class="pictures-overlay">
+						<p class="pictures-text">
+						  Технокряк это современная площадка распространения коронавируса. Компании
+						  используют эту платформу для цифрового шпионажа и атак на защищённые сервера
+						  конкурентов.
+						</p>
+					 </div>
+				  </div>
                 <div class="pictures-box">
                   <h2 class="title-project">Проект Boxes</h2>
                   <p class="text-project">Приложение</p>
                 </div>
               </a>
             </li>
+
             <li class="pictures-li">
               <a href="" class="pictures-link">
+					<div class="pictures-thumb">
                 <img src="./imeges/inspiration.jpg" alt="inspiration" width="370" />
+					 <div class="pictures-overlay">
+						<p class="pictures-text">
+						  Технокряк это современная площадка распространения коронавируса. Компании
+						  используют эту платформу для цифрового шпионажа и атак на защищённые сервера
+						  конкурентов.
+						</p>
+					 </div>
+				  </div>
                 <div class="pictures-box">
                   <h2 class="title-project">Inspiration has no Borders</h2>
                   <p class="text-project">Веб-сайт</p>
                 </div>
               </a>
             </li>
+
             <li class="pictures-li">
               <a href="" class="pictures-link">
+					<div class="pictures-thumb">
                 <img src="./imeges/limited.jpg" alt="limited" width="370" />
+					 <div class="pictures-overlay">
+						<p class="pictures-text">
+						  Технокряк это современная площадка распространения коронавируса. Компании
+						  используют эту платформу для цифрового шпионажа и атак на защищённые сервера
+						  конкурентов.
+						</p>
+					 </div>
+				  </div>
                 <div class="pictures-box">
                   <h2 class="title-project">Издание Limited Edition</h2>
                   <p class="text-project">Дизайн</p>
                 </div>
               </a>
             </li>
+
             <li class="pictures-li">
               <a href="" class="pictures-link">
+					<div class="pictures-thumb">
                 <img src="./imeges/lab.jpg" alt="lab" width="370" />
+					 <div class="pictures-overlay">
+						<p class="pictures-text">
+						  Технокряк это современная площадка распространения коронавируса. Компании
+						  используют эту платформу для цифрового шпионажа и атак на защищённые сервера
+						  конкурентов.
+						</p>
+					 </div>
+				  </div>
                 <div class="pictures-box">
                   <h2 class="title-project">Проект LAB</h2>
                   <p class="text-project">Маркетинг</p>
                 </div>
               </a>
             </li>
+
             <li class="pictures-li">
               <a href="" class="pictures-link">
+					<div class="pictures-thumb">
                 <img src="./imeges/business.jpg" alt="business" width="370" />
+					 <div class="pictures-overlay">
+						<p class="pictures-text">
+						  Технокряк это современная площадка распространения коронавируса. Компании
+						  используют эту платформу для цифрового шпионажа и атак на защищённые сервера
+						  конкурентов.
+						</p>
+					 </div>
+				  </div>
                 <div class="pictures-box">
                   <h2 class="title-project">Growing Business</h2>
                   <p class="text-project">Приложение</p>
